Add binary NBT serialization and deserialization support to improve data handling